# nanobind_example

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/: nanobind_example_ext.cpp
src/nanobind_example/: __init__.py
tests/: test_basic.py
